Bug 283204 - network manager not connecting to umts net
Summary: network manager not connecting to umts net
Status: RESOLVED FIXED
Alias: None
Product: knetworkmanager
Classification: Unmaintained
Component: cellular (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 20:05 UTC by nils
Modified: 2011-12-03 13:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: nm09
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nils 2011-10-02 20:05:06 UTC
Version:           unspecified
OS:                Linux

after selecting the cell network to connect to, the network manager stops at the "Waiting for authorization" stage. This happens every time, even though I give it the PIN (twice, once before it asks if its OK to unlock the device, once when I try to connect to the network).

WLAN works fine and connects automatically.

Heres the syslog:
Oct  2 21:55:26 padfoot64 modem-manager[1016]: <info>  (ttyHS0) opening serial port...
Oct  2 21:55:26 padfoot64 modem-manager[1016]: <info>  Modem /org/freedesktop/ModemManager/Modems/0: unlock no longer required
Oct  2 21:55:26 padfoot64 modem-manager[1016]: <info>  Modem /org/freedesktop/ModemManager/Modems/0: # unlock retries is 0
Oct  2 21:55:26 padfoot64 modem-manager[1016]: <info>  (ttyHS0) closing serial port...
Oct  2 21:55:26 padfoot64 modem-manager[1016]: <info>  (ttyHS0) serial port closed
Oct  2 21:55:42 padfoot64 modem-manager[1016]: <info>  (ttyHS0) opening serial port...
Oct  2 21:55:42 padfoot64 modem-manager[1016]: <info>  Modem /org/freedesktop/ModemManager/Modems/0: state changed (disabled -> enabling)
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> Activation (hso0) starting connection 'o2online UMTS 3G pref.'
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: disconnected -> prepare (reason 'none') [30 40 0]
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) scheduled...
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) started...
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: prepare -> need-auth (reason 'none') [40 60 0]
Oct  2 21:55:42 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) complete.
Oct  2 21:55:42 padfoot64 modem-manager[1016]: <info>  (ttyHS1) opening serial port...
Oct  2 21:55:43 padfoot64 modem-manager[1016]: <info>  Modem /org/freedesktop/ModemManager/Modems/0: state changed (enabling -> enabled)
Oct  2 21:55:43 padfoot64 NetworkManager[1129]: <info> WWAN now enabled by management service
Oct  2 21:55:43 padfoot64 modem-manager[1016]: <info>  Modem /org/freedesktop/ModemManager/Modems/0: state changed (enabled -> registered)
Oct  2 21:55:47 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) scheduled...
Oct  2 21:55:47 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) started...
Oct  2 21:55:47 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: need-auth -> prepare (reason 'none') [60 40 0]
Oct  2 21:55:47 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: prepare -> need-auth (reason 'none') [40 60 0]
Oct  2 21:55:47 padfoot64 NetworkManager[1129]: <info> Activation (hso0) Stage 1 of 5 (Device Prepare) complete.
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <warn> No agents were available for this request.
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: need-auth -> failed (reason 'no-secrets') [60 120 7]
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> Marking connection 'o2online UMTS 3G pref.' invalid.
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <warn> Activation (hso0) failed.
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> (hso0): device state change: failed -> disconnected (reason 'none') [120 30 0]
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> (hso0): deactivating device (reason 'none') [0]
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> Policy set 'nilnet' (wlan0) as default for IPv4 routing and DNS.
Oct  2 21:57:47 padfoot64 NetworkManager[1129]: <info> Policy set 'nilnet' (wlan0) as default for IPv4 routing and DNS.
Oct  2 22:00:13 padfoot64 wpa_supplicant[1172]: WPA: Group rekeying completed with 00:xx:xx:xx:xx:xx [GTK=TKIP]



Reproducible: Always

Steps to Reproduce:
Try to connect to UMTS or GSM network.

Actual Results:  
Doesnẗ connect, stops at "Waiting for authorization"

Expected Results:  
Should connect to networl
Comment 1 nils 2011-10-02 20:07:45 UTC
system info: latest beta2 kubuntu

nils@padfoot64:~$ uname -a
Linux padfoot64 3.0.0-12-generic #19-Ubuntu SMP Fri Sep 23 21:23:39 UTC 2011 x86_64 x86_64 x86_64 GNU/Linux

ii  network-manager                          0.9.1.90-0ubuntu2                          network management framework (daemon and userspace tools)
ii  network-manager-kde                      1:0.9~svngit.nm09.20110610.0c83d8-0ubuntu4 transitional package for plasma-widget-networkmanagement
ii  network-manager-pptp                     0.9.0-0ubuntu2                             network management framework (PPTP plugin core)
ii  network-manager-pptp-gnome               0.9.0-0ubuntu2                             network management framework (PPTP plugin GNOME GUI)
ii  plasma-widget-networkmanagement          0.9~svngit.nm09.20110610.0c83d8-0ubuntu4   Network Management widget for KDE Plasma workspaces
ii  plasma-widget-networkmanagement-dbg      0.9~svngit.nm09.20110610.0c83d8-0ubuntu4   debugging symbols for KDE Network Management
Comment 2 Lamarque V. Souza 2011-10-03 01:13:30 UTC
Git commit 2b5130205d951d5758049f114cfccc6f05881cdc by Lamarque V. Souza.
Committed on 03/10/2011 at 03:09.
Pushed by lvsouza into branch 'nm09'.

Set default GSM's "password" flag to AgentOwned to prevent the password
from not being saved at all and, consequently, the secrets dialog appearing
at each connection attempt.

BUG: 283204
FIXED-IN: nm09

M  +1    -1    libs/ui/gsmwidget.cpp

http://commits.kde.org/networkmanagement/2b5130205d951d5758049f114cfccc6f05881cdc
Comment 3 Lamarque V. Souza 2011-10-03 01:14:08 UTC
The line "unlock no longer required" in your log indicates that the PIN was successfully used to unlock your modem. The second time the dialog appear is not because of PIN but because of the "Password" field, which was not saved when the connection was created.
Comment 4 nils 2011-10-03 08:33:09 UTC
Not sure if this is fixed.

I can now connect to the network if I give it a password for the network, but my network doesnt need a password, and if I dont give one, it stays at the "Waiting for authorization" stage.
Comment 5 nils 2011-10-03 08:48:46 UTC
actually, not sure if your commit is in this package or not... there was an update this morning from ubuntu4 to ubuntu5, my previous comment applies to the update to ubuntu5:

nils@padfoot64:/var/log$ dpkg -l | grep networkmanage
ii  network-manager-kde                      1:0.9~svngit.nm09.20110610.0c83d8-0ubuntu5 transitional package for plasma-widget-networkmanagement
ii  plasma-widget-networkmanagement          0.9~svngit.nm09.20110610.0c83d8-0ubuntu5   Network Management widget for KDE Plasma workspaces
ii  plasma-widget-networkmanagement-dbg      0.9~svngit.nm09.20110610.0c83d8-0ubuntu5   debugging symbols for KDE Network Management
Comment 6 Lamarque V. Souza 2011-10-03 09:27:24 UTC
If your operator acts like mine then it indeed requires a password, but the password is very easy and well known. The fact the password is too easy does not mean it is still not necessary :-).

The same "database" used to feed the mobile connection wizard also contains the password, so it should have been saved like any other information when you created the connection. My patch only works for newly created connections, you will need to recreate your connection or do what you did: enter the password in the edit dialog.

The Ubuntu's update is too old, the version number 0.9~svngit.nm09.20110610.0c83d8-0ubuntu5 indicates the package is using a snapshot from June 10, which is almost four months old.
Comment 7 Lamarque V. Souza 2011-11-19 22:21:27 UTC
Git commit cf90207ac84fce151651ae7571691fadc1dbdedb by Lamarque V. Souza.
Committed on 19/11/2011 at 23:18.
Pushed by lvsouza into branch 'master'.

Improve 2b5130205d951d5758049f114cfccc6f05881cdc to set Bluetooth DUN's
passwords as AgentOwned as well.

CCBUG: 283204

M  +1    -0    libs/ui/gsmwidget.cpp

http://commits.kde.org/networkmanagement/cf90207ac84fce151651ae7571691fadc1dbdedb
Comment 8 Lamarque V. Souza 2011-11-19 22:23:08 UTC
Git commit e2c37a2fc0387aed52e83e3aa0e4c50b468b901f by Lamarque V. Souza.
Committed on 19/11/2011 at 23:18.
Pushed by lvsouza into branch 'nm09'.

Improve 2b5130205d951d5758049f114cfccc6f05881cdc to set Bluetooth DUN's
passwords as AgentOwned as well.

CCBUG: 283204
(cherry picked from commit cf90207ac84fce151651ae7571691fadc1dbdedb)

M  +1    -0    libs/ui/gsmwidget.cpp

http://commits.kde.org/networkmanagement/e2c37a2fc0387aed52e83e3aa0e4c50b468b901f
Comment 9 Lamarque V. Souza 2011-12-03 13:59:44 UTC
*** Bug 288117 has been marked as a duplicate of this bug. ***