Set default GSM's "password" flag to AgentOwned to prevent the password from not being saved at all and, consequently, the secrets dialog appearing at each connection attempt.

BUG: 283204
FIXED-IN: nm09